; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_lag.c_mlx5_deactivate_lag.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_lag.c_mlx5_deactivate_lag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_lag = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.mlx5_core_dev* }
%struct.mlx5_core_dev = type { i32 }

@MLX5_LAG_MODE_FLAGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [56 x i8] c"Failed to deactivate RoCE LAG; driver restart required\0A\00", align 1
@.str.1 = private unnamed_addr constant [127 x i8] c"Failed to deactivate VF LAG; driver restart required\0AMake sure all VFs are unbound prior to VF LAG activation or deactivation\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx5_lag*)* @mlx5_deactivate_lag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlx5_deactivate_lag(%struct.mlx5_lag* %0) #0 {
  %2 = alloca %struct.mlx5_lag*, align 8
  %3 = alloca %struct.mlx5_core_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.mlx5_lag* %0, %struct.mlx5_lag** %2, align 8
  %6 = load %struct.mlx5_lag*, %struct.mlx5_lag** %2, align 8
  %7 = getelementptr inbounds %struct.mlx5_lag, %struct.mlx5_lag* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i64 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %10, align 8
  store %struct.mlx5_core_dev* %11, %struct.mlx5_core_dev** %3, align 8
  %12 = load %struct.mlx5_lag*, %struct.mlx5_lag** %2, align 8
  %13 = call i32 @__mlx5_lag_is_roce(%struct.mlx5_lag* %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* @MLX5_LAG_MODE_FLAGS, align 4
  %15 = xor i32 %14, -1
  %16 = load %struct.mlx5_lag*, %struct.mlx5_lag** %2, align 8
  %17 = getelementptr inbounds %struct.mlx5_lag, %struct.mlx5_lag* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = and i32 %18, %15
  store i32 %19, i32* %17, align 8
  %20 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %3, align 8
  %21 = call i32 @mlx5_cmd_destroy_lag(%struct.mlx5_core_dev* %20)
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %5, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %34

24:                                               ; preds = %1
  %25 = load i32, i32* %4, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %24
  %28 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %3, align 8
  %29 = call i32 @mlx5_core_err(%struct.mlx5_core_dev* %28, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0))
  br label %33

30:                                               ; preds = %24
  %31 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %3, align 8
  %32 = call i32 @mlx5_core_err(%struct.mlx5_core_dev* %31, i8* getelementptr inbounds ([127 x i8], [127 x i8]* @.str.1, i64 0, i64 0))
  br label %33

33:                                               ; preds = %30, %27
  br label %34

34:                                               ; preds = %33, %1
  %35 = load i32, i32* %5, align 4
  ret i32 %35
}

declare dso_local i32 @__mlx5_lag_is_roce(%struct.mlx5_lag*) #1

declare dso_local i32 @mlx5_cmd_destroy_lag(%struct.mlx5_core_dev*) #1

declare dso_local i32 @mlx5_core_err(%struct.mlx5_core_dev*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
